# squawk

./: .env.example  .gitignore  CLAUDE.md  DESIGN.md  Dockerfile  README.md  docker-compose.yml  flake.nix  pyproject.toml
.github/workflows/: build.yml  ci.yml
bot/: CLAUDE.md  Dockerfile  pyproject.toml
bot/bot/: __main__.py  agent.py  bot.py  charts.py  config.py  db.py  enrichment.py  scheduler.py  tools.py
collector/: CLAUDE.md  Dockerfile  docker-compose.yml  pyproject.toml  tracker.py
db/: schema.sql  test_migrations.py
db/migrations/: 20260417192449_initial_schema.sql  20260419095420_drop_users_table.sql  20260606000000_lower_military_score.sql
feeder/: CLAUDE.md  README.md  docker-compose.yml
libs/eventbus/: __init__.py  bus.py  log.py  protocols.py  test_eventbus.py
libs/tar1090/: __init__.py  _http.py  models.py  test_tar1090.py
squawk/: __main__.py  config.py  db.py  digest.py  enrichment.py  events.py  scheduler.py  tags.py  test_digest.py  test_pipeline.py
squawk/actors/: digest.py  enrichment.py  polling.py
squawk/bot/: app.py  broadcaster.py  handlers.py  test_handlers.py
squawk/clients/: adsbdb.py  mictronics.py  planespotters.py  routes.py  test_adsbdb.py  test_clients.py  test_planespotters.py  test_routes.py
squawk/queries/: digest.py  test_digest.py
squawk/repositories/: bulk_aircraft.py  digest.py  enrichment.py  sightings.py  test_bulk_aircraft.py  test_digest.py  test_enrichment.py  test_sightings.py  test_users.py  users.py
