[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# libs/ packages are included by path; Python package names are derived from the
# directory name: libs/tar1090 → tar1090, libs/eventbus → eventbus.
packages = ["squawk", "libs/tar1090", "libs/eventbus"]

[project]
name = "squawk"
version = "0.1.0"
description = "Event-driven ADS-B flight tracker with weekly Telegram digest"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.9",
    "asyncpg>=0.29",
    "python-telegram-bot>=21.0",
    "apscheduler>=3.10",
    "google-adk>=1.0",
    "pydantic>=2.0",
]

[project.scripts]
squawk = "squawk.__main__:main"

[project.optional-dependencies]
dev = [
    "ruff>=0.4",
    "mypy>=1.10",
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[tool.ruff.lint]
select = ["E", "F", "I", "TID"]

[tool.ruff.lint.isort]
known-first-party = ["squawk", "tar1090", "eventbus"]

[tool.ruff.lint.flake8-tidy-imports.banned-api]
# libs/ packages must not import from squawk — enforced by TID251.
# squawk/ uses relative imports internally, so this rule does not
# trigger for legitimate intra-squawk imports.
"squawk" = {msg = "libs packages (tar1090, eventbus) must not import from squawk"}

[tool.mypy]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
norecursedirs = ["collector", "bot", "feeder", "scripts", ".venv"]
