[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["bot"]

[project]
name = "squawk-bot"
version = "0.1.0"
description = "Weekly ADS-B flight digest agent via Telegram"
requires-python = ">=3.13"
dependencies = [
    "google-adk>=0.5",
    "litellm>=1.50",
    "python-telegram-bot>=21.0",
    "psycopg2-binary>=2.9",
    "requests>=2.31",
    "apscheduler>=3.10",
    "cachetools>=5.0",
    "matplotlib>=3.9",
]

[project.scripts]
squawk-bot = "bot.__main__:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "types-requests>=2.31",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
